Including paralelism in functional tests.

--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,21 @@
   <groupId>br.wsbrito.tasks</groupId>
   <artifactId>functional-test</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+
+ 	<build>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>2.20</version>
+              <configuration>
+                  <parallel>all</parallel>
+                  <useUnlimitedThreads>true</useUnlimitedThreads>
+              </configuration>
+          </plugin>
+      </plugins>
+	</build>
+
   <dependencies>
 
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
@@ -21,4 +36,6 @@
 		</dependency>
 
   </dependencies>
+  
+
 </project>
